fixed placeholder alignment

--- a/vs-autocomplete/src/Dropdown.css
+++ b/vs-autocomplete/src/Dropdown.css
@@ -114,7 +114,7 @@
 
 .v-dd-search > div.placeholder {
   color: rgba(0, 0, 0, 0.54);
-  text-align: center;
+  text-align: left;
 }
 
 .v-dd-input {
